--- a/css/main.css
+++ b/css/main.css
@@ -172,7 +172,7 @@ sup {
 .region.fullscreen {
   position: absolute;
   inset: calc(-1 * var(--gap-body-top)) calc(-1 * var(--gap-body-right)) calc(-1 * var(--gap-body-bottom)) calc(-1 * var(--gap-body-left));
-  pointer-events: none;
+  pointer-events: visible;
 }
 
 .region.right {
@@ -228,6 +228,10 @@ sup {
 
 .region.lower.third {
   top: 66%;
+  left: 0;
+  max-width: 80%;
+  text-align: center;
+  word-wrap: break-word;
 }
 
 .region.left {
